modified the annotation component to show ontology term selector

--- a/src/styles/sidebar/components/annotation.scss
+++ b/src/styles/sidebar/components/annotation.scss
@@ -28,6 +28,21 @@
   position: relative;
 }
 
+.search-ontology{
+  width:100%;
+  padding: 6px;
+}
+
+.ontology-terms{
+  width: 100%;
+  margin-top: 5px;
+  height: 100%;
+  padding: 6px;
+}
+
+.ontology{
+
+}
 .annotation.is-dimmed {
   // Lighten the username and bodies of dimmed annotations to make other
   // annotations which are not dimmed stand out
